--- a/Views/Layouts/Contents/Styles/Movies.css
+++ b/Views/Layouts/Contents/Styles/Movies.css
@@ -36,20 +36,23 @@ div#yearfilter {
     height: 100%;
     background: #005a9e;
     border-right: 4px solid #79b1d3;
+    padding-top: 9%;
 }
 div#PanelYearFilter {
-    width: 78%;
+    width: 79.7%;
     height: 100%;
-    color: #fff;
-    font-size: 25px;
     position: fixed;
     z-index: 1;
     display: flex;
     right: 0;
+    color: #fff;
+    text-align: center;
+    font-size: 25px;
+    font-family: Century Gothic;
     visibility: hidden;/*oculta el panel en el menu principal*/
 }
 div#PanelMoviesByYear {
-    width: 56%;
+    width: 60%;
     height: 100%;
     position: fixed;
     right: 0;
@@ -57,7 +60,6 @@ div#PanelMoviesByYear {
     z-index: 1;
     overflow-y: scroll;
     overflow: hidden;
-    /* background-color: red; */
 }
 .yearOpts{
     padding: 9px;
@@ -66,9 +68,9 @@ div#PanelMoviesByYear {
 }
 div.MoviesByYearRow{
     width: 98%;
+    height: 40%;
     float: right;
-    margin: 4.3% 1% 0% 1%;
-    height: 50%;
+    margin: 12% 1% 0% 1%;
 }
 div.RowMovieByYearPoster {
     width: 18%;
@@ -146,33 +148,31 @@ div#PanelMoviesByGender {
 }
 /***************************** [ Menu filtros ] *****************************/
 div#MenuFilters {
-    width: 22%;
+    width: 20%;
     height: 100%;
-    font-size: 25px;
-    color: #fff;
     margin: 0;
     bottom: 0;
     position: fixed;
     z-index: 1;
-    text-align: center;
     background: #005a9e;
+    border-right: 4px solid #79b1d3;
     visibility: hidden;/*oculta el panel en el menu principal*/
 }
 
 div#filterMovieCategory{
-    width: 20%;
-    height: 100%;
-    position: fixed;
-    border-right: 4px solid #79b1d3;
+    padding-top: 28%;
 }
 div.OptionsFilter {
     width: 90%;
-    height: 8%;
-    position: fixed;
-    line-height: normal;
-    margin: 5%;
+    height: 20%;
+    padding: 4%;
+    color: #fff;
+    font-family: Century Gothic;
     text-align: center;
-    font-size: 27px;
+    font-size: 25px;
+    font-weight: bold;
+    line-height: normal;
+    margin: 5% 5% 5% 0;
 }
 /***************************** [ Opciones en modo no visible ] *****************************/
 div.PlayingOptionsHidden{
@@ -221,15 +221,16 @@ div#PanelRecommendedMovies {
     overflow: hidden;
 }
 div.RecommendedMoviesRow{
-    width: 91%;
-    height: 35%;
-    margin: 0% 1% 1% 1%;
-    display: inline-table;
+    width: 98%;
+    height: 94%;
+    float: right;
+    margin: 0% 1% 0% 1%;
+    
 }
 
 div.RecommendedMoviesRowPoster {
     width: 18%;
-    height: 35%;
+    height: 88%;
     margin: 0% 0.6% 0% 0.6%;
     float: left;
     text-align: center;
@@ -238,8 +239,8 @@ div.RecommendedMoviesRowPoster {
 }
 
 div.RecommendedMoviesRowPoster img{
-    max-width: 100%;
-    min-height: 100%;
+    width: 98%;
+    height: 100%;
 }
 
 div.RecommendedMoviesRowPoster h3 {
@@ -248,16 +249,18 @@ div.RecommendedMoviesRowPoster h3 {
 }
 /***************************** [ Titulos ] *****************************/
 .PrincipalMoviesTitle{
+    margin-left: 2%;
     color: #fff;
-    font-size: 30px;
+    font-size: 20px;
     text-align: left;
     text-shadow: 2px 2px 2px #000;
-    font-family: bebas;
+    font-family: Century Gothic;;
+    font-weight: bold;
 }
 /***************************** [ All Movies ] *****************************/
 div#PanelAllMovies {
     width: 100%;
-    height: 100%;
+    height: 50%;
     display: inline-block;
     overflow-x: scroll;
     overflow: hidden;
@@ -265,14 +268,15 @@ div#PanelAllMovies {
 
 div.MoviesRow{
     width: 98%;
+    height: 94%;
     float: right;
     margin: 0% 1% 0% 1%;
-    height: 42%;
+    
 }
 
 div.RowPoster {
     width: 18%;
-    height: 89%;
+    height: 88%;
     margin: 0% 0.6% 0% 0.6%;
     float: left;
     text-align: center;
@@ -281,8 +285,8 @@ div.RowPoster {
 }
 
 div.RowPoster img{
-    max-width: 100%;
-    min-height: 100%;
+    width: 98%;
+    height: 100%;
 }
 
 div.RowPoster h3 {
@@ -298,7 +302,7 @@ div#PanelHeader {
     top: 0;
     z-index: 1;
     color: #fff;
-    background: #0E4D92;
+    background: #005a9e;
 }
 
 div#PanelLeft {
@@ -316,7 +320,7 @@ div#PanelRight {
     height: 85%;
     position: fixed;
     left: 12%;
-    bottom: 2%;
+    bottom: 4%;
     z-index: 1;
 }
 
@@ -342,8 +346,6 @@ div#Title {
     position: fixed;
     top: 3%;
     left:3%;
-    font-family: bebas;
-    font-size: 30px;
     text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
 
 }
@@ -355,8 +357,6 @@ div#MenuDate {
     top: 3%;
     right:10%;
     text-align: right;
-    font-family: bebas;
-    font-size: 30px;
     text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
 }
 
@@ -367,14 +367,20 @@ div#MenuHour {
     top: 3%;
     right: 1%;
     text-align: left;
-    font-family: bebas;
-    font-size: 30px;
     text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
+}
+
+#MenuHour,
+#MenuDate,
+#Title{
+    font-family: Century Gothic;
+    font-size: 25px;
+    font-weight: bold;
 }
 
 div#MenuOptions {
     width: 5%;
-    height: 80%;
+    height: 85%;
     position: fixed;
     top: 12%;
     left: 3%;
@@ -383,11 +389,12 @@ div#MenuOptions {
 
 div.MenuOptions {
     width: 100%;
-    height: 10%;
+    height: 8%;
     float: left;
-    font-size: 35px;
+    font-size: 25px;
     text-align: center;
     border-radius: 5px;
+    margin-top: 20%;
 }
 
 .Selected {
@@ -404,6 +411,7 @@ div#Banner {
     display: none;
 }
 
+
 /***************************** [ Filtros derecha ] *****************************/
 
 
@@ -414,17 +422,6 @@ div#Filter {
     line-height: normal;
     margin: 0 5% 0 5%;
     border-radius: 5px;
-    font-family: bebas;
-}
-
-
-div.OptionsFilter {
-    width: 90%;
-    height: 18%;
-    margin: 5%;
-    text-align: center;
-    font-size: 40px;
-    line-height: normal;
     font-family: bebas;
 }
 
@@ -469,7 +466,7 @@ div#MoviePanel {
     visibility: hidden;
     bottom: 0;
     position: fixed;
-    background: #1f2326;
+    background: #030619;
     z-index: 1;
 }
 
@@ -482,7 +479,7 @@ position: fixed;
 text-align: left;
 font-size: 50px;
 font-weight: bold;
-font-family: bebas;
+font-family: Century Gothic;
 color: #ffff;
 }
 
@@ -564,8 +561,6 @@ div.MovieDescription {
     top: 25%;
     position: fixed;
     text-align: justify;
-    font-weight: lighter;
-    font-family: Calibri;
     border-top: 2px solid #0396a6;
     padding-top: 2%;
 }
@@ -598,12 +593,13 @@ div.Director {
 
 div.Buttons {
     width: 14%;
-    font-size: 30px;
-    text-align: center;
     bottom: 10%;
     position: fixed;
     margin: 1%;
     border: 2px solid transparent;
+    font-size: 30px;
+    text-align: center;
+    font-family: Calibri;
 }
 
 div.MovieOption {
@@ -617,9 +613,11 @@ div.MovieOption {
 .MovieDuration,
 .Genders,
 .Year,
-.Rating {
+.Rating,
+.MovieDescription
+{
     font-size: 20px;
-    font-family: Corbel;
+    font-family: Calibri;
 }
 
 .Director,
