--- a/Views/Layouts/Contents/Styles/Movies.css
+++ b/Views/Layouts/Contents/Styles/Movies.css
@@ -163,16 +163,14 @@ div#filterMovieCategory{
     padding-top: 28%;
 }
 div.OptionsFilter {
-    width: 90%;
-    height: 20%;
-    padding: 4%;
+    height: 35%;
     color: #fff;
     font-family: Century Gothic;
-    text-align: center;
+    text-align: left;
     font-size: 25px;
     font-weight: bold;
     line-height: normal;
-    margin: 5% 5% 5% 0;
+    margin: 5% 0 5% 0;
 }
 /***************************** [ Opciones en modo no visible ] *****************************/
 div.PlayingOptionsHidden{
@@ -566,15 +564,25 @@ div.MovieDescription {
 }
 
 div#PlayPanel {
+    height: 10%;
     position: fixed;
     bottom: 4%;
     left: 5%;
+    border-radius: 10px;
+    display:flex;
+    justify-content: center;
+    align-items: center;
 }
 
 div#ExitPanel {
+    height: 10%;
     position: fixed;
     bottom: 4%;
     left: 20%;
+    border-radius: 10px;
+    display:flex;
+    justify-content: center;
+    align-items: center;
 }
 
 div.Casting {
