--- a/Views/Layouts/Contents/Styles/Movies.css
+++ b/Views/Layouts/Contents/Styles/Movies.css
@@ -35,7 +35,7 @@ div#yearfilter {
     width: 18%;
     height: 100%;
     background: #005a9e;
-    border-right: 4px solid #79b1d3;
+   border-right: 4px solid #79b1d3;
     padding-top: 9%;
 }
 div#PanelYearFilter {
@@ -221,7 +221,7 @@ div#PanelRecommendedMovies {
 }
 div.RecommendedMoviesRow{
     width: 98%;
-    height: 94%;
+    height: 100%;
     float: right;
     margin: 0% 1% 0% 1%;
     
@@ -229,17 +229,18 @@ div.RecommendedMoviesRow{
 
 div.RecommendedMoviesRowPoster {
     width: 18%;
-    height: 88%;
-    margin: 0% 0.6% 0% 0.6%;
+    height: 89%;
     float: left;
     text-align: center;
     border: 3px solid transparent;
     border-radius: 3px;
+
 }
 
 div.RecommendedMoviesRowPoster img{
-    width: 98%;
-    height: 100%;
+    max-width: 100%;
+    min-height: 100%;
+
 }
 
 div.RecommendedMoviesRowPoster h3 {
@@ -301,7 +302,7 @@ div#PanelHeader {
     top: 0;
     z-index: 1;
     color: #fff;
-    background: #005a9e;
+    background: #002b46;
 }
 
 div#PanelLeft {
@@ -354,13 +355,13 @@ div#MenuDate {
     height: 8%;
     position: fixed;
     top: 3%;
-    right:10%;
+    right:17%;
     text-align: right;
     text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
 }
 
 div#MenuHour {
-    width: 8%;
+    width: 15%;
     height: 8%;
     position: fixed;
     top: 3%;
@@ -465,7 +466,7 @@ div#MoviePanel {
     visibility: hidden;
     bottom: 0;
     position: fixed;
-    background: #030619;
+    background: linear-gradient(#030619, rgb(0, 43, 70));
     z-index: 1;
 }
 
@@ -533,7 +534,7 @@ div.Score {
     left: 24%;
     height: 7%;
     width: 4%;
-    border: 3px solid #0E4D92;
+    border: 3px solid #005a9e;
     border-radius: 60px;
     font-size: 20px;
     text-align: center;
@@ -547,7 +548,7 @@ div.Star {
     position: fixed;
     top: 14%;
     left: 29.5%;
-    color: #0E4D92;
+    color: #005a9e;
     border-radius: 60px;
     font-size: 30px;
     text-align: center;
