--- a/Views/Layouts/Contents/Styles/Movies.css
+++ b/Views/Layouts/Contents/Styles/Movies.css
@@ -34,8 +34,7 @@ div.LanguageContainer {
 div#yearfilter {
     width: 18%;
     height: 100%;
-    background: #005a9e;
-   border-right: 4px solid #79b1d3;
+    border-right: 5px solid #e9bb26;
     padding-top: 9%;
 }
 div#PanelYearFilter {
@@ -154,8 +153,7 @@ div#MenuFilters {
     bottom: 0;
     position: fixed;
     z-index: 1;
-    background: #005a9e;
-    border-right: 4px solid #79b1d3;
+    border-right: 5px solid #e9bb26;
     visibility: hidden;/*oculta el panel en el menu principal*/
 }
 
@@ -238,9 +236,8 @@ div.RecommendedMoviesRowPoster {
 }
 
 div.RecommendedMoviesRowPoster img{
-    max-width: 100%;
-    min-height: 100%;
-
+    width: 90%;
+    height: 100%;
 }
 
 div.RecommendedMoviesRowPoster h3 {
@@ -281,11 +278,11 @@ div.RowPoster {
     float: left;
     text-align: center;
     border: 3px solid transparent;
-    border-radius: 3px;
+    border-radius: 3px; 
 }
 
 div.RowPoster img{
-    width: 98%;
+    width: 90%;
     height: 100%;
 }
 
@@ -302,8 +299,6 @@ div#PanelHeader {
     top: 0;
     z-index: 1;
     color: #fff;
-    background: #202020;
-    border-right: 2px solid #005a9e;
 }
 
 div#PanelLeft {
@@ -318,10 +313,10 @@ div#PanelLeft {
 
 div#PanelRight {
     width: 85%;
-    height: 85%;
+    height: 80%;
     position: fixed;
-    left: 12%;
-    bottom: 4%;
+    left: 13%;
+    bottom: 2%;
     z-index: 1;
 }
 
@@ -342,38 +337,42 @@ div#BackgroundPanel {
 
 /***************************** [ Cabezera ] *****************************/
 div#Title {
-    width:15%;
-    height: 8%;
+    width:30%;
+    height:10%;
     position: fixed;
-    top: 3%;
-    left:3%;
-    text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
-
+    top: 2%;
+    left:35%;
 }
 
+div#Title img{
+    max-width: 100%;
+    min-height: 100%;
+}
+
+
 div#MenuDate {
-    width: 10%;
+    width: 12%;
     height: 8%;
     position: fixed;
-    top: 3%;
-    right:17%;
-    text-align: right;
+    bottom: 10%;
+    left:1%;
+    text-align: center;
     text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
 }
 
 div#MenuHour {
-    width: 15%;
+    width: 12%;
     height: 8%;
     position: fixed;
-    top: 3%;
-    right: 1%;
-    text-align: left;
+    bottom: 3%;
+    left: 1%;
+    text-align: center;
     text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
 }
 
 #MenuHour,
-#MenuDate,
-#Title{
+#MenuDate
+{
     font-family: Century Gothic;
     font-size: 25px;
     font-weight: bold;
@@ -384,7 +383,7 @@ div#MenuOptions {
     height: 85%;
     position: fixed;
     top: 12%;
-    left: 3%;
+    left: 5%;
     z-index: 1;
 }
 
@@ -396,6 +395,9 @@ div.MenuOptions {
     text-align: center;
     border-radius: 5px;
     margin-top: 20%;
+    display:flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .Selected {
@@ -467,21 +469,24 @@ div#MoviePanel {
     visibility: hidden;
     bottom: 0;
     position: fixed;
-    background: linear-gradient(#030619, #002b46);
+    background: -o-linear-gradient(rgb(3, 6, 25), rgb(0, 43, 70));
+    background: linear-gradient(rgb(3, 6, 25), rgb(0, 43, 70));
     z-index: 1;
 }
 
 
 div.MovieTitle {
 width: 75%;
+height: 10%;
 right: 1%;
 top: 5%;
 position: fixed;
 text-align: left;
-font-size: 50px;
+font-size: 60px;
 font-weight: bold;
 font-family: Century Gothic;
 color: #ffff;
+overflow: hidden;
 }
 
 .Poster {
@@ -494,7 +499,7 @@ border-radius: 8px;
 
 div.MovieDuration {
     position: fixed;
-    top:16%;
+    top:18%;
     left: 35%;
     width: 15%;
     text-align: center;
@@ -502,7 +507,7 @@ div.MovieDuration {
 
 div.Genders {
     position: fixed;
-    top:16%;
+    top:18%;
     right: 20%;
     width: 30%;
     text-align: left;
@@ -510,7 +515,7 @@ div.Genders {
 
 div.Year {
     position: fixed;
-    top:16%;
+    top:18%;
     right: 10%;
     width: 12%;
     text-align: center;
@@ -518,7 +523,7 @@ div.Year {
 
 div.Rating {
     position: fixed;
-    top:14%;
+    top:16.5%;
     right: 4%;
     text-align: center;
     font-size: 30px;
@@ -531,7 +536,7 @@ div.Rating {
 
 div.Score {
     position: fixed;
-    top:14%;
+    top:16%;
     left: 24%;
     height: 7%;
     width: 4%;
@@ -547,7 +552,7 @@ div.Score {
 div.Star {
     width: 3.5%;
     position: fixed;
-    top: 14%;
+    top: 17%;
     left: 29.5%;
     color: #005a9e;
     border-radius: 60px;
@@ -563,7 +568,7 @@ div.MovieDescription {
     position: fixed;
     text-align: justify;
     border-top: 2px solid #0396a6;
-    padding-top: 2%;
+    padding-top: 1%;
 }
 
 div#PlayPanel {
@@ -627,14 +632,14 @@ div.MovieOption {
 .Rating,
 .MovieDescription
 {
-    font-size: 20px;
+    font-size: 25px;
     font-family: Calibri;
 }
 
 .Director,
 .Casting{
     text-align: left;
-    font-size: 22px;
+    font-size: 25px;
     font-family: Bell MT;
     font-style: italic;
 }
