--- a/Views/Layouts/Contents/Styles/Movies.css
+++ b/Views/Layouts/Contents/Styles/Movies.css
@@ -34,8 +34,9 @@ div.LanguageContainer {
 div#yearfilter {
     width: 18%;
     height: 100%;
-    border-right: 5px solid #e9bb26;
     padding-top: 9%;
+    border-right: 5px solid #e9bb26;
+    box-shadow: 3px 3px 5px 0px rgba(0, 0, 0);
 }
 div#PanelYearFilter {
     width: 79.7%;
@@ -154,6 +155,7 @@ div#MenuFilters {
     position: fixed;
     z-index: 1;
     border-right: 5px solid #e9bb26;
+    box-shadow: 3px 3px 5px 0px rgba(0, 0, 0);
     visibility: hidden;/*oculta el panel en el menu principal*/
 }
 
