--- a/Views/Layouts/Contents/Styles/Movies.css
+++ b/Views/Layouts/Contents/Styles/Movies.css
@@ -99,7 +99,7 @@ div.RowMovieByYearPoster h3 {
 div#PanelGenderFilter {
     /* color:#fff; */
     font-size: 30px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: Century Gothic;
     width: 69%;
     height: 100%;
     /* margin: 5px; */
