--- a/Views/Layouts/Contents/Styles/Movies.css
+++ b/Views/Layouts/Contents/Styles/Movies.css
@@ -34,7 +34,7 @@ div.LanguageContainer {
 div#yearfilter {
     width: 18%;
     height: 100%;
-    padding-top: 9%;
+    padding-top: 7%;
     border-right: 5px solid #e9bb26;
     box-shadow: 3px 3px 5px 0px rgba(0, 0, 0);
 }
@@ -160,7 +160,8 @@ div#MenuFilters {
 }
 
 div#filterMovieCategory{
-    padding-top: 28%;
+    margin-top: 28%;
+    margin-left: 15%;
 }
 div.OptionsFilter {
     height: 50%;
@@ -314,10 +315,10 @@ div#PanelLeft {
 }
 
 div#PanelRight {
-    width: 85%;
+    width: 75%;
     height: 80%;
     position: fixed;
-    left: 13%;
+    right: 6%;
     bottom: 2%;
     z-index: 1;
 }
@@ -357,7 +358,7 @@ div#MenuDate {
     height: 8%;
     position: fixed;
     bottom: 10%;
-    left:1%;
+    left:5%;
     text-align: center;
     text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
 }
@@ -367,7 +368,7 @@ div#MenuHour {
     height: 8%;
     position: fixed;
     bottom: 3%;
-    left: 1%;
+    left: 5%;
     text-align: center;
     text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
 }
@@ -384,8 +385,8 @@ div#MenuOptions {
     width: 5%;
     height: 85%;
     position: fixed;
-    top: 12%;
-    left: 5%;
+    top: 18%;
+    left: 8.5%;
     z-index: 1;
 }
 
@@ -480,7 +481,7 @@ div#MoviePanel {
 div.MovieTitle {
 width: 75%;
 height: 10%;
-right: 1%;
+right: 4%;
 top: 5%;
 position: fixed;
 text-align: left;
@@ -502,7 +503,7 @@ border-radius: 8px;
 div.MovieDuration {
     position: fixed;
     top:18%;
-    left: 35%;
+    left: 30%;
     width: 15%;
     text-align: center;
 }
@@ -510,7 +511,7 @@ div.MovieDuration {
 div.Genders {
     position: fixed;
     top:18%;
-    right: 20%;
+    right: 24%;
     width: 30%;
     text-align: left;
 }
@@ -518,7 +519,7 @@ div.Genders {
 div.Year {
     position: fixed;
     top:18%;
-    right: 10%;
+    right: 15%;
     width: 12%;
     text-align: center;
 }
@@ -526,7 +527,7 @@ div.Year {
 div.Rating {
     position: fixed;
     top:16.5%;
-    right: 4%;
+    right: 9%;
     text-align: center;
     font-size: 30px;
     text-shadow: 2px 2px 2px #000;
@@ -539,7 +540,7 @@ div.Rating {
 div.Score {
     position: fixed;
     top:16%;
-    left: 24%;
+    left: 21%;
     height: 7%;
     width: 4%;
     border: 3px solid #005a9e;
@@ -554,8 +555,8 @@ div.Score {
 div.Star {
     width: 3.5%;
     position: fixed;
-    top: 17%;
-    left: 29.5%;
+    top: 16.5%;
+    left: 25.5%;
     color: #005a9e;
     border-radius: 60px;
     font-size: 30px;
@@ -565,7 +566,7 @@ div.Star {
 
 div.MovieDescription {
     width: 72%;
-    right: 4%;
+    right: 7%;
     top: 25%;
     position: fixed;
     text-align: justify;
