--- a/Views/Layouts/Contents/Styles/Movies.css
+++ b/Views/Layouts/Contents/Styles/Movies.css
@@ -43,7 +43,7 @@ div#PanelYearFilter {
     position: fixed;
     z-index: 1;
     display: flex;
-
+    right: 2%;
     color: #fff;
     text-align: center;
     font-size: 25px;
@@ -147,7 +147,7 @@ div#PanelMoviesByGender {
 }
 /***************************** [ Menu filtros ] *****************************/
 div#MenuFilters {
-    width: 22%;
+    width: 18%;
     height: 100%;
     margin: 0;
     bottom: 0;
