Actualizacion grabador amulet

--- a/Views/Layouts/Tv/Styles/TvMin.css
+++ b/Views/Layouts/Tv/Styles/TvMin.css
@@ -20,6 +20,10 @@ div#EpgContainer {
     z-index: 0;
 }
 
+#WeatherSummary {
+    display: none;
+}
+
 div#EpgHeader {
     height: 5%;
     width: 98%;
