--- a/Views/Layouts/Tv/Styles/TvMin.css
+++ b/Views/Layouts/Tv/Styles/TvMin.css
@@ -75,7 +75,7 @@ div#EpgHours {
     position: fixed;
     width: 76%;
     height: 5%;
-    right: 1%;
+    left: 20%;
     bottom: 50%;
     background-size: 100% 100%;
 }
@@ -130,14 +130,15 @@ div#TemperatureGroup {
 }
 
 div#EpgDays {
-    width: 20%;
+    wwidth: 16%;
     height: 5%;
     bottom: 50%;
     position: fixed;
     font-size: 20px;
     font-family: Arial Rounded MT Bold;
-    margin-left: 10%;
+    margin-left: 4%;
     text-shadow: 4px 3px 2px rgba(0,0,0,0.5);
+    text-align: center;
 }
 
 div#EpgDay {
