--- a/Views/Styles/Themes/DarkBlue.css
+++ b/Views/Styles/Themes/DarkBlue.css
@@ -71,7 +71,7 @@ div.HourRow
 {
     text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
     font-size: 20px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Arial Rounded MT Bold;
     font-weight: bold;
 }
 
