--- a/Views/Layouts/Tv/Styles/TvMin.css
+++ b/Views/Layouts/Tv/Styles/TvMin.css
@@ -364,6 +364,7 @@ div#EpgMainLogo {
     height: 30%;
     top: 13%;
     right: 6%;
+    background-image: url('/Media/Logos/MainLogo.png');
 }
 
 div#EpgTitle {
