--- a/Views/Layouts/Tv/Styles/TvMin.css
+++ b/Views/Layouts/Tv/Styles/TvMin.css
@@ -364,7 +364,7 @@ div#EpgMainLogo {
     height: 30%;
     top: 13%;
     right: 6%;
-    background-image: url('./Media/Logos/MainLogo.png');
+    background-image: url('/Media/Logos/MainLogo.png');
 }
 
 div#EpgTitle {
@@ -408,7 +408,7 @@ div#EpgRating {
     height: 5%;
     position: fixed;
     top: 16%;
-    left: 48%;
+    left: 48.5%;
     color: #0396a6;
 }
 
