--- a/Views/Layouts/Tv/Styles/TvMin.css
+++ b/Views/Layouts/Tv/Styles/TvMin.css
@@ -359,6 +359,7 @@ div.EpgLogo {
 
 /*Contiene logo empresa*/
 div#EpgMainLogo {
+    position: fixed;
     width: 15%;
     height: 31%;
     top: 9%;
