--- a/Views/Layouts/Tv/Styles/TvMin.css
+++ b/Views/Layouts/Tv/Styles/TvMin.css
@@ -73,7 +73,7 @@ div#EpgHours {
     position: fixed;
     width: 76%;
     height: 5%;
-    left: 20%;
+    right: 2%;
     bottom: 50%;
     background-size: 100% 100%;
 }
@@ -128,13 +128,13 @@ div#TemperatureGroup {
 }
 
 div#EpgDays {
-    width: 16%;
+    width: 20%;
     height: 5%;
     bottom: 50%;
     position: fixed;
-    font-size: 20px;
+    font-size: 22px;
     font-family: Arial Rounded MT Bold;
-    margin-left: 4%;
+    left: 2%;
     text-shadow: 4px 3px 2px rgba(0,0,0,0.5);
     text-align: center;
 }
