--- a/Views/Layouts/Tv/Styles/TvMin.css
+++ b/Views/Layouts/Tv/Styles/TvMin.css
@@ -342,6 +342,7 @@ div#ChannelRow7 {
     height: 20%;
     width: 100%;
     background-color: #2f4142;
+    outline: 1px solid rgba(24, 46, 58, 0.9);
 }
 
 /***************************** [INFO] *****************************/
