--- a/Views/Layouts/Tv/Styles/TvMin.css
+++ b/Views/Layouts/Tv/Styles/TvMin.css
@@ -170,6 +170,7 @@ div.ChannelName {
     width: 28%;
     float: left;
     padding-bottom: 0.5%;
+    text-transform: uppercase;
 }
 
 div.Date {
@@ -218,7 +219,7 @@ div.Date {
     height: 13%;
     bottom: 5%;
     left: 7.5%;
-    font-family: Calibri;
+     font-family: calibri-regular;
     font-size: 18px;
     text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
  }
@@ -374,7 +375,7 @@ div#EpgMainLogo {
 
 div#EpgTitle {
     width: 85%;
-    height: 15%;
+    height: 11%;
     margin-top: 2%;
     margin-left: 1%;
     overflow: hidden;
