--- a/Views/Layouts/Tv/Styles/TvMin.css
+++ b/Views/Layouts/Tv/Styles/TvMin.css
@@ -16,6 +16,7 @@ and open the template in the editor.
 
 .Ttle {
     margin: 0;
+    color: #dfbe5e;
 }
 
 .Rtg{
@@ -202,16 +203,11 @@ div.Date {
  }  
 
  div.Title {
-    position: fixed;
-    width: 32%;
-    height: 10%;
-    bottom: 12%;
-    left: 7.2%;
-    color: #dfbe5e;
-    font-weight: bold;
-    font-size: 20px;
-    font-family: Gotham;
-    text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
+     width: 95%;
+     height: 17%;
+     font-size: 20px;
+     text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
+     float: left;
  }
 
  div.Time{
