--- a/Views/Layouts/Tv/Styles/TvMin.css
+++ b/Views/Layouts/Tv/Styles/TvMin.css
@@ -208,10 +208,11 @@ div.Date {
 
  div.Title {
      width: 95%;
-     height: 17%;
+     height: 20%;
      font-size: 20px;
      text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
      float: left;
+     font-weight: bold;
  }
 
  div.Time{
@@ -227,13 +228,13 @@ div.Date {
 
  div.Description {
     position: fixed;
-    width: 82%;
-    height: 13%;
-    bottom: 5%;
-    left: 7.5%;
+     width: 94%;
+     height: 30%;
      font-family: calibri-regular;
-    font-size: 18px;
-    text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
+     font-size: 19px;
+     text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
+     float: left;
+     overflow: hidden;
  }
 
  div.Rating {
