--- a/Views/Layouts/Tv/Styles/TvMin.css
+++ b/Views/Layouts/Tv/Styles/TvMin.css
@@ -27,6 +27,12 @@ and open the template in the editor.
     color: #0396a6;
 }
 
+.RowDur {
+    margin: 0;
+    float: right;
+    text-align: right;
+}
+
 div#EpgContainer {
     width: 100%;
     height: 100%;
