--- a/Views/Layouts/Tv/Styles/TvMin.css
+++ b/Views/Layouts/Tv/Styles/TvMin.css
@@ -31,6 +31,7 @@ and open the template in the editor.
     margin: 0;
     float: right;
     text-align: right;
+    padding-right: 1%;
 }
 
 div#EpgContainer {
