--- a/Views/Layouts/Tv/Styles/TvMin.css
+++ b/Views/Layouts/Tv/Styles/TvMin.css
@@ -797,8 +797,8 @@ div#PvrProgramDate{
 }
 
 div#PvrProgramDescription {
-    width: 62%;
-    height: 10%;
+    width: 60%;
+    height: 13%;
     margin-top: 5.5%;
     margin-left: 1%;
     position: fixed;
@@ -806,7 +806,7 @@ div#PvrProgramDescription {
     text-align: left;
     color: #fff;
     font-size: 18px;
-    font-family: Calibri;
+    font-family: calibri-regular;
     text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
 }
 
