--- a/Views/Layouts/Tv/Styles/TvMin.css
+++ b/Views/Layouts/Tv/Styles/TvMin.css
@@ -34,8 +34,8 @@ and open the template in the editor.
     padding-right: 1%;
 }
 
-div#PvrLogoContainer {
-
+#PvrLogoContainer {
+    background: #2f414a;
 }
 
 #PvrMainLogo {
