--- a/Views/Layouts/Tv/Styles/TvMin.css
+++ b/Views/Layouts/Tv/Styles/TvMin.css
@@ -10,7 +10,8 @@ and open the template in the editor.
 
 /***************************** [CONTENEDORES] *****************************/
 #PvrWeatherIcon{
-    
+    position: fixed;
+    bottom: 4%;
 }
 .Times {
     margin: 0;
