--- a/Views/Layouts/Tv/Styles/TvMin.css
+++ b/Views/Layouts/Tv/Styles/TvMin.css
@@ -11,7 +11,8 @@ and open the template in the editor.
 /***************************** [CONTENEDORES] *****************************/
 #PvrWeatherIcon{
     position: fixed;
-    bottom: 4%;
+    bottom: 10%;
+    left: 20%;
 }
 .Times {
     margin: 0;
@@ -41,7 +42,7 @@ and open the template in the editor.
     background: #2f414a;
     position: fixed;
     width: 29%;
-    height: 35%;
+    height: 40%;
     top: 42%;
     left: 2.5%;
     border-radius: 6px;
@@ -633,7 +634,7 @@ div#PvrDate{
     width: 25%;
     height: 4%;
     position: fixed;
-    margin-left: 4.5%;
+    left: 4.5%;
     margin-top: 1%;
     top: 90%;
     font-family: Arial Rounded MT Bold;
