--- a/Views/Layouts/Tv/Styles/TvMin.css
+++ b/Views/Layouts/Tv/Styles/TvMin.css
@@ -523,10 +523,10 @@ div#BarContainer{
 }
 
 div#BarPosition {
-    border-right: 5px solid #fff;
+    border-radius: 6px;
     height: 100%;
     top: 2%;
-    background-color: transparent;
+    background-color: #0396a6;
     width: 0%;
     z-index: 1;
     text-align: right;
@@ -536,7 +536,7 @@ div#BarPosition {
 
 div#BarStatus {
     right: 0;
-    color: #fff;
+    color: #e3c15a;
     text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
     text-align: center;
     top: 100%;
