--- a/Views/Layouts/Tv/Styles/TvMin.css
+++ b/Views/Layouts/Tv/Styles/TvMin.css
@@ -264,6 +264,7 @@ div.Date {
      text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
      float: left;
      overflow: hidden;
+     line-height: 10pt;
  }
 
  div.Rating {
