--- a/Views/Layouts/Tv/Styles/TvMin.css
+++ b/Views/Layouts/Tv/Styles/TvMin.css
@@ -469,6 +469,7 @@ div#EpgTime{
     font-weight: bold;
     font-family: Arial Rounded MT Bold;
     text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
+    text-transform: uppercase;
 }
 
 div#EpgEpisode{
