--- a/Views/Layouts/Tv/Styles/TvMin.css
+++ b/Views/Layouts/Tv/Styles/TvMin.css
@@ -25,7 +25,7 @@ div#EpgSerie
     display: none;
 }
 
-/***************************** [CONTENEDORES] *****************************/
+/***************************** [EPG] *****************************/
 
 #PvrWeatherIcon{
     position: fixed;
@@ -593,10 +593,6 @@ div#PvrWeather{
     text-align: center;
 }
 
-.PvrSun {
-    color: #fff;
-}
-
 div#PvrDate{
     width: 25%;
     height: 4%;
@@ -605,7 +601,6 @@ div#PvrDate{
     margin-top: 1%;
     top: 90%;
     font-size: 18px;
-    color: #fff;
     text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
     text-align: center;
 }
@@ -628,8 +623,7 @@ div.PvrHeader {
     text-align: center;
     top: 9%;
     font-size: 25px;
-    background-color: #246681;
-    border-radius: 10px;
+    border-radius: 6x;
 }
 
 div#CurrentPvrOption {
@@ -642,14 +636,12 @@ div#CurrentPvrOption {
     left: 0;
     position: absolute;
     top: 1%;
-    color: #dfbe5e;
 }
 
 .PvrChevronRight {
     right: 0;
     position: absolute;
     top: 0;
-    color: #dfbe5e;
 }
 
 div#PvrList {
@@ -681,9 +673,7 @@ div.PvrProgram {
     overflow: hidden;
     font-size: 23px;
     margin: 0.1%;
-    color:#000;
     font-weight: bold;
-    background: #dfbe5e;
     border-radius: 6px;
     text-align: left;
 }
@@ -849,3 +839,5 @@ div.TimeNewRecordingFocus {
 div.InstructionsManual {
     font-size: 24px;
 }
+
+/***************************** [EPG] *****************************/
