--- a/Views/Layouts/Tv/Styles/TvMin.css
+++ b/Views/Layouts/Tv/Styles/TvMin.css
@@ -406,20 +406,19 @@ div#EpgMainLogo {
 }
 
 div#EpgTitle {
-    width: 85%;
-    height: 11%;
-    margin-top: 2%;
-    margin-left: 1%;
-    overflow: hidden;
-    white-space: pre-wrap;
-    text-align: justify;
-    font-size: 23px;
-    text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
+    position: fixed;
+    width: 11%;
+    height: 27%;
+    top: 7%;
+    right: 2%;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 70%;
 }
 
 div#EpgDescription {
-    width: 48%;
-    height: 20%;
+    width: 57%;
+    height: 14%;
     margin-left: 0.5%;
     padding-top: 1%;
     position: fixed;
@@ -428,6 +427,7 @@ div#EpgDescription {
     text-align: justify;
     font-size: 18px;
     text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
+    line-height: 35px;
 }
 
 div#EpgTime {
