Actualizacion version TEMA

--- a/Views/Layouts/Tv/Styles/TvMin.css
+++ b/Views/Layouts/Tv/Styles/TvMin.css
@@ -8,7 +8,7 @@ and open the template in the editor.
     Author     : tania
 */
 
-/***************************** [CONTENEDORES OCULTOS EN TV MIN] *****************************/
+/***************************** [CONTENEDORES OCULTOS EN MIN] *****************************/
 
 div.Quality,
 div.Duration,
