--- a/Views/Layouts/Tv/Styles/TvMin.css
+++ b/Views/Layouts/Tv/Styles/TvMin.css
@@ -382,11 +382,10 @@ div#ChannelRow7 {
 
 div.EpgLogo {
     position: fixed;
-    width: 5%;
+    width: 6%;
     height: 8%;
-    top: 10%;
-    right: 18%;
-    margin-right: 1%;
+    top: 8%;
+    right: 14%;
     overflow: hidden;
     background-position: center;
     background-size: contain;
@@ -397,12 +396,13 @@ div.EpgLogo {
 /*Contiene logo empresa*/
 div#EpgMainLogo {
     position: fixed;
-    width: 15%;
-    height: 31%;
-    top: 9%;
+    width: 11%;
+    height: 27%;
+    top: 7%;
     right: 2%;
     background-repeat: no-repeat;
     background-position: center;
+    background-size: 70%;
 }
 
 div#EpgTitle {
