--- a/Views/Styles/Themes/DarkBlue.css
+++ b/Views/Styles/Themes/DarkBlue.css
@@ -250,7 +250,7 @@ div#ChannelRow5,
 div#ChannelRow6,
 div#ChannelRow7 {
     background-color: #2f4142;
-    /*outline: 1px solid rgba(24, 46, 58, 0.9);*/
+    outline: 1px solid rgb(42, 61, 71);
 }
 
 div#BarPosition {
