--- a/Views/Styles/General.css
+++ b/Views/Styles/General.css
@@ -205,12 +205,15 @@ div.ContainerIndex {
 
 div#InfoContainer {
     background-size: 100% 100%;
-    width: 100%;
-    height: 20%;
+    width: 90%;
+    left:5%;
     bottom: 0;
     position: fixed;
     visibility: hidden;
     font-size: 20px;
+    margin-bottom:2%;
+    opacity: 1;
+    color: #fff;
 }
 
 div.ChannelNumber {
