--- a/Views/Layouts/Tv/Styles/TvMin.css
+++ b/Views/Layouts/Tv/Styles/TvMin.css
@@ -20,7 +20,9 @@ div#PvrProgramStars,
 div#EpgRecording,
 div#EpgEpisode,
 div#EpgDuration,
-div#EpgSerie
+div#EpgSerie,
+div.Time,
+div.ChannelName
 {
     display: none;
 }
@@ -224,10 +226,10 @@ div.Date {
     text-align: right;
     padding-right: 3%;
 }
-  
- div.ChannelName,
+
+div.ChannelNumber,
  div.Date{ 
-    padding-top: 2%;
+    padding-top: 1%;
     text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
  }  
 
