--- a/Views/Styles/General.css
+++ b/Views/Styles/General.css
@@ -204,7 +204,7 @@ div.ContainerIndex {
 /********************* INFO TV *****************************/
 
 div#InfoContainer {
-    background-size: 100% 100%;
+    background-size: 100%;
     width: 95%;
     left: 2.5%;
     bottom: 0;
