--- a/Views/Styles/Themes/DarkBlue.css
+++ b/Views/Styles/Themes/DarkBlue.css
@@ -31,7 +31,7 @@ div.HourRow
 div.BackgroundInfo {
     background-image: url('DarkBlue/info.png');
     background-repeat: no-repeat;
-    background-size: 100%;
+    background-size: 100% 100%;
 }
 
 
