--- a/Views/Layouts/Tv/Styles/TvMin.css
+++ b/Views/Layouts/Tv/Styles/TvMin.css
@@ -222,7 +222,7 @@ div.ChannelName {
 
 div.Date {
     float: right;
-    width: 52%;
+    width: 10%;
     text-align: right;
     padding-right: 3%;
 }
@@ -235,7 +235,7 @@ div.ChannelNumber,
 
  div.Title {
      width: 95%;
-     height: 20%;
+     height: 22%;
      font-size: 20px;
      text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
      float: left;
@@ -254,12 +254,12 @@ div.ChannelNumber,
 
  div.Description {
      width: 94%;
-     height: 30%;
+     height: 45%;
      font-size: 19px;
      text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
      float: left;
      overflow: hidden;
-     line-height: 10pt;
+     line-height: 30px;
  }
 
  div.Rating {
