--- a/Views/Styles/Themes/DarkBlue.css
+++ b/Views/Styles/Themes/DarkBlue.css
@@ -249,8 +249,7 @@ div#ChannelRow5,
 div#ChannelRow6,
 div#ChannelRow7 {
     background-color: #2f4142;
-    border: 1px solid transparent;
-    /*border: 1px solid rgb(42, 61, 71);*/
+    outline: 1px solid transparent;
     border-radius: 6px;
 }
 
