--- a/Views/Styles/Themes/DarkBlue.css
+++ b/Views/Styles/Themes/DarkBlue.css
@@ -249,8 +249,9 @@ div#ChannelRow5,
 div#ChannelRow6,
 div#ChannelRow7 {
     background-color: #2f4142;
-    outline: 1px solid transparent;
     border-radius: 6px;
+    /*border: 1px solid;*/
+    margin: 1%;
 }
 
 div#BarPosition {
